1998-06-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (draw_rounded_box): Now we show marked files
	with a rounded box instead of a box.

Sun Jun 07 17:24:15 1998  George Lebl  <jirka@5z.com>

	* gnome-mdi.h,gnome-mdi-child.h: fix the cplusplus stuff,and
	  make it use GNOME_(BEGIN|END)_DECLS

1998-06-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: a configurable MDI object.
	see gnome-hello/gnome-hello-7-mdi.c or gnome-utils/ghex for an
	example of its use.
 	* gnome-mdi-child.[ch]: an MDI child object
	* libgnomeui.h: includes above headers
	* Makefile.am: changed to include above sources in libgnomeui

1998-06-07  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-client.c: Inclueded 'stdarg.h'.
	(gnome_client_object_init): Preset 'static_args'.
	(gnome_client_add_static_arg): New function.  Enables one to set
 	some command line options, which will always be added to the clone
 	and restart command.
	(gnome_real_client_destroy): Free 'static_args'.
	(client_set_prop_from_array_with_arg): Includes static arguments
 	into the command line, before sending them to the session manager.
	(client_set_prop_from_glist): New function. Sets properties from a
 	list of string (Not yet used).

	* gnome-init.c: Included 'libgnomeui/gnome-client.h'. New variable
 	'client'.
	(our_gtk_parse_func): Adds the parsed gtk command line options as
 	static arguments to the master client.

	* gnome-client.h: Added 'gnome_client_add_static_arg' declaration.
	(struct _GnomeClient): Added member 'static_args'.

1998-06-06  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-init.c (gnome_init): Added 'gnome_client_init' call.

	* gnome-client.c: New variable 'gnome_client_auto_connect_master',
 	'cloned_client', 'sm_cloned_id_arg_name' and
 	'cloned_id'. 'default_client' renamed to 'master_client'. Replaec
 	'array_free' with 'gnome_string_array_free'.
 	(gnome_client_object_init): Renamed 'gnome_client_init' function.