@@ -1,3 +1,9 @@
+1998-06-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gtkdial.[ch]: added view_only member and gtk_dial_set_view_only()
+	function that makes gtkdial not respond to mouse events in case
+	it is only used as display.
+
 1998-06-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-icon-list.c (draw_rounded_box): Now we show marked files
